--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 agp = "8.2.2"
 kotlin = "1.9.0"
+kspVersion = "1.9.21-1.0.16"
+hiltVersion = "2.48"
 core-ktx = "1.13.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.2.1"
@@ -8,6 +10,29 @@ espresso-core = "3.6.1"
 lifecycle-runtime-ktx = "2.8.6"
 activity-compose = "1.9.3"
 compose-bom = "2023.08.00"
+navVersion = "2.8.3"
+composeMaterial = "1.7.4"
+hiltNav = "1.2.0"
+hilt = "2.49"
+coil = "2.6.0"
+kotlinxCoroutines = "1.7.3"
+coroutines = "1.7.1"
+room = "2.6.1"
+retrofit = "2.9.0"
+okhttp = "4.12.0"
+viewmodel = "2.8.4"
+paging = "3.3.2"
+compileSdk = "34"
+minSdk = "29"
+jvmTarget = "1.8"
+targetSdk = "34"
+versionCode = "1"
+versionName = "1.0"
+kotlinCompilerExt = "1.5.1"
+appcompat = "1.7.0"
+material = "1.12.0"
+swiperefresh = "0.25.1"
+splash = "1.0.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -24,8 +49,30 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+nav-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navVersion" }
+compose-material = { group = "androidx.compose.material", name = "material", version.ref = "composeMaterial" }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNav" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
+kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
+androidx-room = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-common = { group = "androidx.room", name = "room-common", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofit-converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewmodel" }
+livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "viewmodel" }
+paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
+paging-runtime-ktx = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging" }
+splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splash" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
 
